--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -20,23 +20,22 @@
   <div class="container">
     <!-- Header -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
-      <h3 class="mb-0">🧭 لوحة نظام اللجان</h3>
-      <div class="d-flex align-items-center gap-2">
-        <span id="userInfo" class="user-chip badge bg-light text-dark border">
-          <i class="bi bi-person"></i>
-          <span id="userUsername">—</span>
-          <span class="mx-1">—</span>
-          <span id="userFullName">—</span>
-          <span class="ms-2 badge bg-secondary" id="userRole">—</span>
-        </span>
-        <a class="btn btn-outline-secondary" href="/evaluations_dashboard.html" target="_blank">
-          <i class="bi bi-bar-chart-line"></i> عرض عام (بدون تسجيل)
-        </a>
-        <button id="logoutBtn" class="btn btn-danger">
-          <i class="bi bi-box-arrow-right"></i> خروج
-        </button>
-      </div>
-    </div>
+  <h3 class="mb-0">لوحة نظام اللجان</h3>
+  <div class="d-flex align-items-center gap-2">
+    <span id="userInfo" class="user-chip badge bg-light text-dark border">
+      <i class="bi bi-person"></i>
+      <span id="userUsername">—</span>
+      <span class="mx-1">—</span>
+      <span id="userFullName">—</span>
+      <span class="ms-2 badge bg-secondary" id="userRole">—</span>
+    </span>
+    <!-- حُذف زر: عرض عام (بدون تسجيل) -->
+    <button id="logoutBtn" class="btn btn-danger">
+      <i class="bi bi-box-arrow-right"></i> خروج
+    </button>
+  </div>
+</div>
+
 
     <!-- Grid -->
     <div class="row g-4">
@@ -50,7 +49,7 @@
       </div>
 
       <!-- manage_committees.html (admin-only) -->
-      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
+      <div class="col-12 col-sm-6 col-lg-4" data-admin="true">
         <a href="/manage_committees.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-success"><i class="bi bi-gear"></i></div>
           <h5 class="mt-3">إدارة تقييم اللجان</h5>
@@ -86,13 +85,14 @@
       </div>
 
       <!-- users-manage.html (admin-only) -->
-      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
-        <a href="/users-manage.html" class="card-link p-4 bg-white d-block h-100">
-          <div class="icon text-dark"><i class="bi bi-people-gear"></i></div>
-          <h5 class="mt-3">إدارة المستخدمين</h5>
-          <p class="mb-0 text-muted">إضافة/تعديل/تعطيل مستخدم</p>
-        </a>
-      </div>
+<div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
+  <a href="/users-manage.html" class="card-link p-4 bg-white d-block h-100">
+    <div class="icon text-dark"><i class="bi bi-people-gear"></i></div>
+    <h5 class="mt-3">إدارة المستخدمين</h5>
+    <p class="mb-0 text-muted">إضافة/تعديل/تعطيل مستخدم</p>
+  </a>
+</div>
+
 
       <!-- audit-logs.html (admin-only) -->
       <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
