--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -90,7 +90,7 @@
       <!-- users-manage.html (admin-only) -->
 <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
   <a href="/users-manage.html" class="card-link p-4 bg-white d-block h-100">
-    <div class="icon text-dark"><i class="bi bi-people-gear"></i></div>
+    <div class="icon text-dark"><i class="bi bi-people-fill"></i></div>
     <h5 class="mt-3">إدارة المستخدمين</h5>
     <p class="mb-0 text-muted">إضافة/تعديل/تعطيل مستخدم</p>
   </a>
